--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--<!doctype html>
+<!doctype html>
 <html lang='en'>
     <head>
         <meta charset="UTF-8" />
@@ -189,15 +189,4 @@ footer p {
             </ul>
         </footer>
     </body>
-<html>-->
-<!DOCTYPE html>
 <html>
-<head>
-<style>
-html,body{height:100%}
-</style> 
-</head>
-<body>
-<iframe src="http://de2.dishost.cloud:5035/" style="border:none;" height="100%" width="100%" ></iframe>
-</body>
-</html>
